# syla

./: .cursorrules  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  docker-compose.dev.yml  docker-compose.yml  setup-github-repos.sh  syla  syla-api-config.toml
.cursor/rules/: README.md  cli-patterns.mdc  eva-system.mdc  project-context.mdc  rust-standards.mdc  service-patterns.mdc  testing-patterns.mdc  workspace-concepts.mdc
.eva/: blackboard.md
.eva/archive/: syla-shipd-platform.md
.eva/docs/: eva-system.md
.eva/docs/architecture/: cli-specification.md  implementation-roadmap.md  platform-architecture.md  service-architecture.md  workspace-strategy.md
.eva/projects/mvp-plan/: blackboard.md
.eva/projects/syla-cli/: blackboard.md
.platform/config/: repos.toml
.platform/templates/: platform-template.toml
cli/: Cargo.toml
cli/src/: config.rs  docker.rs  git.rs  lib.rs  main.rs  platform.rs
cli/src/commands/: dev.rs  doctor.rs  init.rs  mod.rs  platform.rs  status.rs
cli/src/services/: health_monitor.rs  log_streamer.rs  mod.rs  process_manager.rs
cli/tests/: e2e_workflow_test.rs  integration_test.rs  process_manager_test.rs
examples/: README.md  api-execution-javascript.json  api-execution-python.json
proto-common/syla/: common.proto
proto-deps/common/syla/: common.proto
scripts/: detect-changes.sh  serve-setup.py  setup-proto-deps.sh  setup-service.sh  setup.sh
