[package]
name = "syla"
version = "0.1.0"
edition = "2021"
authors = ["@ielm"]
description = "Meta-platform CLI for Syla workspace management"

[[bin]]
name = "syla"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.18"

# Process management
sysinfo = "0.30"

# Terminal UI
indicatif = "0.17"
console = "0.15"
colored = "2.1"
dialoguer = "0.11"
comfy-table = "7.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }
ureq = "2.9"

# Unix process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

# Docker
bollard = "0.16"

# File system
walkdir = "2.4"
glob = "0.3"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
which = "6.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

